# eff-playground

./: README.md  eff-playground.cabal  stack.yaml
examples/: State.eff
src/: AST.hs  Core.hs  Eval.hs  Lexer.hs  Parser.hs  Token.hs
