name:                eff-playground
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/eff-playground#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    AST
    Core
    Eval
    Lexer
    Parser
    Token

  build-depends:
    base >= 4.7 && < 5,
    containers,
    megaparsec == 6.0.1,
    mtl,
    pretty-show,
    RepLib,
    safe,
    text,
    unbound,
    unordered-containers

  default-language:    Haskell2010
  ghc-options:         -Wall

-- executable eff-playground-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , eff-playground
--   default-language:    Haskell2010
--
-- test-suite eff-playground-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , eff-playground
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/eff-playground
